<resources>
    <string name="app_name">ResipesDishesApp</string>
    <string name="categoryText">категории</string>
    <string name="favourites">избранное</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cardView_iv_description">categoriesImage_category</string>
    <string name="drawable_error">image not found</string>
    <string name="category_image">Изображение категории %1$s</string>
    <string name="RecipesBurger">бургеры</string>
    <string name="recipe_image_description">Изображение рецепта %1$s</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="portion">Порции</string>
    <string name="cooking_method">Способ приготовления</string>
    <string name="method_index_format">%d.</string>
    <string name="defaultPortionQuantity">1</string>
    <string name="icon_fovourites">Иконка избранное</string>
    <string name="image_favorites">Изображение избранное</string>
    <string name="text_empty_favorites">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="errorData">Ошибка получения данных</string>
    <string name="errorConnect">Ошибка соединения</string>
    <string name="error_loading_favorites">Ошибка загрузки избранных рецептов</string>
</resources>