<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    tools:context=".FavoritesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bcg_favorites"
            android:contentDescription="@string/image_favorites"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/StyleTextCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_category"
            android:text="@string/favourites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/main_space_half_8"
        android:layout_marginTop="@dimen/main_space_16"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:spanCount="1"
        tools:itemCount="8"
        tools:listitem="@layout/item_recipes" />

    <LinearLayout
        android:id="@+id/tvEmptyFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_space_16"
        android:layout_marginTop="@dimen/margin_top_text_favorites"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            style="@style/StyleTextFavoritesEmpty"
            android:layout_width="@dimen/width_text_favorites"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_empty_favorites" />

    </LinearLayout>

</LinearLayout>