<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height_category">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/burger_hamburger" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/StyleTextCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/main_space_16"
                android:background="@drawable/shape_text_category"
                android:singleLine="false"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Бургер с грибами и сыром" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTextRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/quantityPortion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/portion" />

                <TextView
                    android:id="@+id/tvQuantityPortion"
                    style="@style/quantityPortion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/defaultPortionQuantity" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/sbQuantityPortion"
                style="@style/styleSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/seekBar_margin_top"
                android:max="5"
                android:min="1"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progress="1"
                android:thumbOffset="0dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:background="@drawable/shape_recipe_recyclerview"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/main_space_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:spanCount="1"
            tools:itemCount="8"
            tools:listitem="@layout/item_ingredient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:orientation="vertical">

            <TextView
                style="@style/StyleTextRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cooking_method" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_space_16"
            android:layout_marginTop="@dimen/main_space_16"
            android:background="@drawable/shape_recipe_recyclerview"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:spanCount="1"
            tools:itemCount="6"
            tools:listitem="@layout/item_method" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>